--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -433,6 +433,7 @@
                             />
                             <TextView
 
+                                    android:id="@+id/two_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="19sp"
@@ -454,6 +455,7 @@
 
                             <TextView
 
+                                    android:id="@+id/three_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="19sp"
@@ -466,6 +468,7 @@
 
 
                             <TextView
+                                    android:id="@+id/four_tv"
 
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -481,6 +484,7 @@
                         </LinearLayout>
 
                         <TextView
+                                android:id="@+id/five_tv"
                                 android:layout_marginTop="15dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -515,11 +519,13 @@
                             android:orientation="horizontal">
 
                         <ImageView
+                                android:id="@+id/six_icon"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/main_slide_best_pointree_icon"/>
 
                         <TextView
+                                android:id="@+id/seven_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="16sp"
@@ -554,16 +560,18 @@
                         >
 
                             <ImageView
+                                    android:id="@+id/eight_iv"
                                     android:layout_gravity="center_horizontal"
                                     android:layout_width="88dp"
                                     android:layout_height="114dp"
-                                    android:background="@drawable/border_background"/>
+                                    android:src="@drawable/home_slide_stock_kb"/>
 
                             <LinearLayout
                                     android:layout_marginTop="5dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                            android:layout_gravity="center_horizontal">
                                 <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
@@ -576,6 +584,7 @@
                                 />
 
                                 <TextView
+                                        android:id="@+id/eight_tv"
                                         android:layout_marginLeft="5dp"
                                         android:fontFamily="@font/nanumsquareregular"
                                         android:includeFontPadding="false"
@@ -584,7 +593,7 @@
                                         android:textSize="14sp"
                                         android:textColor="#757575"
                                         android:lineSpacingExtra="2sp"
-                                        android:text="국민은행"
+                                        android:text="KB"
                                 />
                             </LinearLayout>
 
@@ -602,12 +611,15 @@
                         >
 
                             <ImageView
+                                    android:id="@+id/nine_iv"
                                     android:layout_gravity="center_horizontal"
                                     android:layout_width="88dp"
                                     android:layout_height="114dp"
-                                    android:background="@drawable/border_background"/>
+                            android:src="@drawable/home_slide_stock_seoul_auction"
+                            />
 
                             <LinearLayout
+                                    android:layout_gravity="center_horizontal"
                                     android:layout_marginTop="5dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -618,12 +630,13 @@
                                         android:textSize="14sp"
                                         android:textColor="#fdbd37"
                                         android:lineSpacingExtra="2sp"
-                                        android:text="1"
+                                        android:text="2"
                                         android:fontFamily="@font/nanumsquareextrabold"
                                         android:includeFontPadding="false"
                                 />
 
                                 <TextView
+                                        android:id="@+id/nine_tv"
                                         android:layout_marginLeft="5dp"
                                         android:fontFamily="@font/nanumsquareregular"
                                         android:includeFontPadding="false"
@@ -632,7 +645,7 @@
                                         android:textSize="14sp"
                                         android:textColor="#757575"
                                         android:lineSpacingExtra="2sp"
-                                        android:text="국민은행"
+                                        android:text="서울옥션"
                                 />
                             </LinearLayout>
 
@@ -650,11 +663,13 @@
                         >
 
                             <ImageView
+                                    android:id="@+id/ten_iv"
                                     android:layout_width="88dp"
                                     android:layout_height="114dp"
-                                    android:background="@drawable/border_background"/>
+                                    android:src="@drawable/home_slide_stock_google"/>
 
                             <LinearLayout
+                                    android:layout_gravity="center_horizontal"
                                     android:layout_marginTop="5dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -667,10 +682,11 @@
                                         android:textSize="14sp"
                                         android:textColor="#fdbd37"
                                         android:lineSpacingExtra="2sp"
-                                        android:text="1"
+                                        android:text="3"
                                 />
 
                                 <TextView
+                                        android:id="@+id/ten_tv"
                                         android:layout_marginLeft="5dp"
                                         android:fontFamily="@font/nanumsquareregular"
                                         android:includeFontPadding="false"
@@ -679,7 +695,7 @@
                                         android:textSize="14sp"
                                         android:textColor="#757575"
                                         android:lineSpacingExtra="2sp"
-                                        android:text="국민은행"
+                                        android:text="구글"
                                 />
                             </LinearLayout>
 
